hard code changed to dynamic api_base

--- a/frontend/admin-library.html
+++ b/frontend/admin-library.html
@@ -37,7 +37,7 @@
 
   <h3>All Books</h3>
   <div id="allBooks"></div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/admin-library.js"></script>
 </body>
 </html>
