--- a/frontend/campuswall.html
+++ b/frontend/campuswall.html
@@ -277,7 +277,7 @@
 
   <h3>All Threads</h3>
   <div id="posts"></div>
-
+  <script src="assets/js/config.js"></script>
   <script>
     const toggleBtn = document.getElementById('toggleFormBtn');
     const form = document.getElementById('postForm');
