--- a/frontend/faculty-assignments.html
+++ b/frontend/faculty-assignments.html
@@ -283,7 +283,7 @@
 
   <!-- Floating Action Button -->
   <button class="fab" title="Create New Assignment">+</button>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/faculty-assignments.js"></script>
 </body>
 </html>
