--- a/frontend/faculty-dashboard.html
+++ b/frontend/faculty-dashboard.html
@@ -223,6 +223,7 @@
       <button onclick="window.location.href='faculty-assignments.html'">Allot Assignments</button>
     </div>
   </div>
+  <script src="assets/js/config.js"></script>
   <script>
     const user = JSON.parse(localStorage.getItem('user'));
     if (!user) {
