--- a/frontend/faculty-results.html
+++ b/frontend/faculty-results.html
@@ -255,7 +255,7 @@
       </div>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/faculty-results.js"></script>
 </body>
 </html>
