--- a/frontend/group-chat.html
+++ b/frontend/group-chat.html
@@ -22,6 +22,7 @@
   <button id="uploadBtn">Upload File</button>
   <br><br>
   <button id="exitBtn">Exit Group</button>
+  <script src="assets/js/config.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="assets/js/group-chat.js"></script>
 </body>
