--- a/frontend/notices.html
+++ b/frontend/notices.html
@@ -305,7 +305,7 @@
       </div>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/notices.js"></script>
 </body>
 </html>
