--- a/frontend/student-attendance.html
+++ b/frontend/student-attendance.html
@@ -104,7 +104,7 @@
     <tbody id="recordsTable"></tbody>
     </table>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/studentAttendance.js"></script>
 </body>
 </html>
