--- a/frontend/student-doubts.html
+++ b/frontend/student-doubts.html
@@ -133,7 +133,7 @@ g<!DOCTYPE html>
     <h3>My Posted Doubts</h3>
     <div id="doubtsList"></div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/studentDoubts.js"></script>
 </body>
 </html>
