--- a/frontend/student-resources.html
+++ b/frontend/student-resources.html
@@ -132,7 +132,7 @@
       <a href="#" class="download">Download</a>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/student-resources.js"></script>
 </body>
 </html>
