--- a/frontend/student-results.html
+++ b/frontend/student-results.html
@@ -91,7 +91,7 @@
     <h3 style="text-align: center;">Performance Trend</h3>
     <canvas id="gpaChart"></canvas>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/student-results.js"></script>
 </body>
 </html>
