--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -41,7 +41,7 @@
 </form>
 
 <div class="bokka" onclick="window.location.href='admin-library.html'">Add Books</div>
-
+<script src="assets/js/config.js"></script>
 <script>
 function toggleStudentFields() {
   const role = document.getElementById('role').value;
@@ -66,7 +66,7 @@ document.getElementById('addUserForm').addEventListener('submit', async (e) => {
   }
 
   try {
-    const res = await fetch('http://localhost:3000/api/admin/add-user', {
+    const res = await fetch(API_BASE+'/api/admin/add-user', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
