--- a/frontend/attendance.html
+++ b/frontend/attendance.html
@@ -326,7 +326,7 @@
       </form>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/facultyAttendance.js"></script>
 </body>
 </html>
