--- a/frontend/faculty-doubts.html
+++ b/frontend/faculty-doubts.html
@@ -263,7 +263,7 @@
       </div>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/facultyDoubts.js"></script>
 </body>
 </html>
