--- a/frontend/faculty-resources.html
+++ b/frontend/faculty-resources.html
@@ -254,7 +254,7 @@
       <p>Your previously uploaded files will appear here.</p>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/faculty-resources.js"></script>
 </body>
 
