--- a/frontend/library.html
+++ b/frontend/library.html
@@ -135,7 +135,7 @@
     <h3>My Borrowed Books</h3>
     <div id="myBooks"></div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/library.js"></script>
 </body>
 </html>
