--- a/frontend/login.html
+++ b/frontend/login.html
@@ -162,7 +162,7 @@
       <a href="contact-admin.html">Forgot Password?</a>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/login.js"></script>
 </body>
 </html>
