--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -340,7 +340,7 @@
   </div>
 
   <div id="toast" role="status"></div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/profile.js"></script>
 </body>
 </html>
