--- a/frontend/student-assignments.html
+++ b/frontend/student-assignments.html
@@ -162,7 +162,7 @@
       </div>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/student-assignments.js"></script>
   <div id="toast"></div>
 </body>
