--- a/frontend/study-groups.html
+++ b/frontend/study-groups.html
@@ -171,7 +171,7 @@
       </div>
     </div>
   </div>
-
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/study-groups.js"></script>
   <div id="toast"></div>
 </body>
